--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,21 +4,21 @@
   display: flex;
   align-items: center;
 
+  @include respond(tablet) {
+    padding: 2.1rem $padding-side-tablet-sm;
+  }
+
   &.sticky {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     background-color: rgba(#fff, 0.9);
-    padding-top: 1.2rem !important;
-    padding-bottom: 1.2rem !important;
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 3px 13px 1px;
     animation: appearFromTop 0.6s;
-    z-index: 999;
-  }
-
-  @include respond(tablet) {
-    padding: 2.1rem $padding-side-tablet-sm;
+    z-index: 99999;
   }
 
   &__nav-toggle {
